deploy2.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-after-service
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        command: ['sh', '-c', 'echo The app is running!']
        ports:
        - containerPort: 80
