deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-volumes
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: createDir
          image: alpine
          command: ['sh', '-c', 'sleep 5 && echo "Creating dir" && mkdir -p /opt/log && echo test > /opt/logs/test.txt && sleep infinity']
          volumeMounts:
            - name: logs
              mountPath: /opt
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
        - name: busybox
          image: busybox:1.28
          command: [ "sh", "-c", "while [ true ]; do echo 'Writing logs now..'; sleep 5; done | tee -a /opt/logs/logs.txt" ]
          volumeMounts:
            - name: logs
              mountPath: /opt
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
        - name: multitool
          image: wbitt/network-multitool
          command: ['sh', '-c', 'echo "The logs is running!" && tail -f /opt/logs/logs.txt']
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 8080
          volumeMounts:
            - name: logs
              mountPath: /opt
      volumes:
          - name: logs
            emptyDir: {}
