pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: netology-web
  labels:
    app: echoserver
spec:
  containers: 
  - image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
    name: echoserver1
