service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: multitool-svc
spec:
  selector:
    app: multitool
  ports:
  - port: 8080
    protocol: TCP
